# rust-templates

./: README.md  rust-toolchain
.github/workflows/: ci.yml  test-released.yml
account/template/: Cargo.toml  README.md  rust-toolchain.toml
account/template/src/: lib.rs
account/template/wit/: interface.wit
auth-component/template/: Cargo.toml  README.md
auth-component/template/src/: lib.rs
auth-component/template/wit/: interface.wit
note/template/: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
note/template/src/: lib.rs
note/template/wit/: interface.wit
program/: inputs.toml
program/template/: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
program/template/src/: lib.rs
scripts/: test_released.sh
tx-script/template/: Cargo.toml  README.md  cargo-generate.toml  rust-toolchain.toml
tx-script/template/src/: lib.rs
tx-script/template/wit/: interface.wit
