[package]
name = "{{crate_name}}"
version = "0.1.0"
edition = "2021"

[lib]
# Build this crate as a self-contained, C-style dynamic library
# This is required to emit the proper Wasm module type
crate-type = ["cdylib"]

[dependencies]
# Miden SDK consists of a stdlib (intrinsic functions for VM ops, stdlib functions and types)
# and transaction kernel API for the Miden rollup
{% if compiler_path %}
miden = { path = "{{ compiler_path }}/sdk/sdk" }
{% elsif compiler_branch %}
miden = { git = "https://github.com/0xMiden/compiler", branch = "{{ compiler_branch }}" }
{% elsif compiler_rev %}
miden = { git = "https://github.com/0xMiden/compiler", rev = "{{ compiler_rev }}" }
{% else %}
miden = { git = "https://github.com/0xMiden/compiler" }
{% endif %}
wit-bindgen-rt = "0.28"

[package.metadata.component]
package = "miden:{{crate_name | replace: "_", "-"}}"

[package.metadata.miden]
supported-types = ["RegularAccountUpdatableCode"]

[package.metadata.component.target.dependencies]
"miden:base" = { path = "wit-deps/miden.wit" }
"miden:core-intrinsics" = { path = "wit-deps/miden-core-intrinsics.wit" }
"miden:core-stdlib" = { path = "wit-deps/miden-core-stdlib.wit" }
"miden:core-base" = { path = "wit-deps/miden-core-base.wit" }

[profile.release]
# optimize the output for size
opt-level = "z"
# Explicitly disable panic infrastructure on Wasm, as
# there is no proper support for them anyway, and it
# ensures that panics do not pull in a bunch of standard
# library code unintentionally
panic = "abort"

[profile.dev]
# Explicitly disable panic infrastructure on Wasm, as
# there is no proper support for them anyway, and it
# ensures that panics do not pull in a bunch of standard
# library code unintentionally
panic = "abort"
opt-level = 1
debug-assertions = false
overflow-checks = false
debug = true