[package]
name = "{{crate_name}}"
version = "0.1.0"
edition = "2021"

[lib]
# Build this crate as a self-contained, C-style dynamic library
# This is required to emit the proper Wasm module type
crate-type = ["cdylib"]

[dependencies]
{% if compiler_path %}
miden = { path = "{{ compiler_path }}/sdk/sdk" }
{% elsif compiler_branch %}
miden = { git = "https://github.com/0xMiden/compiler", branch = "{{ compiler_branch }}" }
{% elsif compiler_rev %}
miden = { git = "https://github.com/0xMiden/compiler", rev = "{{ compiler_rev }}" }
{% else %}
miden = { version = "0.6" }
{% endif %}

