[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2021"

[lib]
# Build this crate as a self-contained, C-style dynamic library
# This is required to emit the proper Wasm module type
crate-type = ["cdylib"]

[dependencies]
# Miden SDK consists of a stdlib (intrinsic functions for VM ops, stdlib functions and types)
# and transaction kernel API for the Miden rollup
{% if compiler_path %}
miden = { path = "{{ compiler_path }}/sdk/sdk" }
{% elsif compiler_branch %}
miden = { git = "https://github.com/0xMiden/compiler", branch = "{{ compiler_branch }}" }
{% elsif compiler_rev %}
miden = { git = "https://github.com/0xMiden/compiler", rev = "{{ compiler_rev }}" }
{% else %}
miden = { version = "0.7" }
{% endif %}

[package.metadata.component]
package = "miden:{{project-name | replace: "_", "-"}}"

[package.metadata.miden]
project-kind = "transaction-script"

# Miden dependencies for cargo-miden build/linking
[package.metadata.miden.dependencies]
# TODO: Add your account contract dependencies here
"miden:add-contract" = { path = "../add-contract"}

[package.metadata.component.target.dependencies]
# TODO: Add your account contract WIT dependencies here
"miden:add-contract" = { path = "../add-contract/target/generated-wit/" }
